Merged: patch from https://lists.denx.de/pipermail/u-boot/2024-May/554168.html by Jiaxun Yang <jiaxun.yang@flygoat.com> to support loongarch.

--- a/cmd/Kconfig
+++ b/cmd/Kconfig
@@ -328,7 +328,7 @@ config CMD_BOOTZ
 
 config CMD_BOOTI
 	bool "booti"
-	depends on ARM64 || RISCV || SANDBOX
+	depends on ARM64 || LOONGARCH || RISCV || SANDBOX
 	default y
 	help
 	  Boot an AArch64 Linux Kernel image from memory.
